fix(css): condensing indices, whitespace

--- a/css/score.css
+++ b/css/score.css
@@ -60,13 +60,12 @@ input[type="button"] {
 #btn_p1Up, #btn_p2Up, #btn_p1Down, #btn_p2Down {
   width: 48vh;
   height: 46vw;
-
   color: transparent;
 }
 
 #scores {
   width: 100%;
-  z-index: 4;
+  z-index: 2;
   margin-top: 25vw;
   margin-bottom: 25vw;
 
@@ -91,7 +90,7 @@ input[type="button"] {
   display: block;
   padding: 1vh;
   margin: 80vw 44vh;
-  width: 10vh;
+  width: 10vh;  
   height: 10vh;
-  z-index: 10;
+  z-index: 4;
 }
